@@ -14,8 +14,9 @@
       <class name="test.thread.SequentialSample2Test" />
       <class name="test.thread.SequentialSample3Test" />
 -->
+    <parameter name="source-directory" value="test/src/test/converter" />
     <classes>
-      <class name="test.tmp.A" />
+      <class name="test.converter.JUnitConverterTest" />
     </classes>
   </test>
 
